[package]
name = "crypto-mac"
version = "0.8.0"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Trait for Message Authentication Code (MAC) algorithms"
documentation = "https://docs.rs/crypto-mac"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "mac"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.12"
subtle = { git = "https://github.com/mesalock-linux/subtle-sgx" }
blobby = { git = "https://github.com/mesalock-linux/rustcrypto-utils-sgx", optional = true }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[features]
dev = ["blobby"]
std = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

[badges]
travis-ci = { repository = "RustCrypto/traits" }

[package.metadata.docs.rs]
features = [ "std" ]
